Avoid usage of deprecated APIs in CSV generation
Refactored the CSV generation logic to eliminate the usage of deprecated
Apache Commons CSV APIs. Moreover, the the code simplified by using
record classes for handling the CSV output POJOs.